session6 contents changed

--- a/session6/index.html
+++ b/session6/index.html
@@ -1,14 +1,14 @@
 <html>
 
 <head>
-    <title> KEN </title>
+    <title> Nginx </title>
 </head>
 
 <body>
     <center>
-        <h1> Street Fighter - Winner</h1>
+        <h1> Nginx öğreniyorum ve bu benim ilk nginx web sayfam</h1>
         <center>
-            <center><img src="ken.jpg" alt="The Winner is KEN" </center>
+            <center><img src="nginx.jpg" alt="I'am learning nginx" </center>
 </body>
 
 </html>
