--- a/session6/index.html
+++ b/session6/index.html
@@ -6,7 +6,7 @@
 
 <body>
     <center>
-        <h1> Nginx öğreniyorum ve bu benim ilk nginx web sayfam</h1>
+        <h1> Hello everyone. I'am learning web servers and Nginx. This is my first one</h1>
         <center>
             <center><img src="nginx.jpg" alt="I'am learning nginx" </center>
 </body>
