--- a/session26/Nvirginia_1/index.html
+++ b/session26/Nvirginia_1/index.html
@@ -8,7 +8,7 @@
     <center>
         <h1> N.Virginia_1</h1>
         <center>
-            <center><img src="hobby.jpg" alt="Good Chinchilla" </center>
+            <center><img src="hobby.jpg" alt="Good girl" </center>
 </body>
 
 </html
